--- a/TimeLoggingApp/appsettings.json
+++ b/TimeLoggingApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-TimeLoggingApp-32f14c72-b983-4fce-8cd0-dd7727bdcd84;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=postgres;Database=postgres;UserName=postgres;Password=uworx;"
   },
   "Logging": {
     "LogLevel": {
