--- a/MLProjects/ML.Jira/ML.Jira.csproj
+++ b/MLProjects/ML.Jira/ML.Jira.csproj
@@ -6,8 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.ML" Version="3.0.0-preview.23266.6" />
-    <PackageReference Include="Microsoft.ML.FastTree" Version="3.0.0-preview.23266.6" />
+    <PackageReference Include="Microsoft.ML" Version="3.0.1" />
+    <PackageReference Include="Microsoft.ML.FastTree" Version="3.0.1" />
   </ItemGroup>
   <ItemGroup Label="WorkLogsModelTicket">
     <None Include="WorkLogsModelTicket.mlnet">
